# quantum_qiskit_basics

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: tensor_product.ipynb  vector_matrices.ipynb
src/: __init__.py  circuits.py  entanglement.py  quantum_operators.py  quantum_states.py  tensor_product.py  vector_matrices.py
tests/: __init__.py  test_vector_matrices.py
